--- a/assest/style.css
+++ b/assest/style.css
@@ -29,3 +29,10 @@ h1 {
     max-width: 200px;
     max-height: 175px;
 }
+
+
+@media only screen and (max-width: 250px) {
+    body {
+        visibility: hidden;
+    }
+}
