--- a/assest/style.css
+++ b/assest/style.css
@@ -1,36 +1,52 @@
-:root{
-    
+body{
+    background-color: #565656;
 }
 
 h1 {
     text-align: center;
+    background: linear-gradient(299deg, rgba(255,255,255,1) 25%, rgba(158,158,158,1) 50%, rgba(20,20,20,1) 75%);
+    padding: 5rem;
+    color: #fba926;
+    font-size: 50px;
+    border-bottom-color: #ffbb00;
+    border-style: double;
+    border-width: 10px;
 }
 
-#h1-break {
-    height:5px;
-    border-width:0;
-    background-color:black;
+img{
+    background-color: white;
 }
-
 #card-container{
     display: flex;
     flex-wrap: wrap;
 }
+
 .card{
     border-style: solid;
-    border-color: black;
+    border-color: #FBA92C;
     margin: 30px;
+    width: 18rem;
+    background-color: black;
 }
 
-.card-body {
-    text-align: center;
-}
 .icon {
     max-width: 200px;
     max-height: 175px;
 }
 
+.card-body {
+    text-align: center;
+}
 
+.list-group {
+    padding: 10px;
+}
+
+.list-group-item{
+    background-color: #fba926;
+}
+
+/* Minimum screen requirement */
 @media only screen and (max-width: 250px) {
     body {
         visibility: hidden;
